--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Denise Ivanoff - Actress</title>
+    <title>Denise Ivanoff - Actress
+    </title>
     <meta charset="utf-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,8 +20,14 @@
 	    <li><a href="resume.html">RESUME, PHOTOS, REEL, CLIPS</a></li>
             <li><a href="http://link.reelwomen-nyc.com/contactus" target="_blank">CONTACT</a></li>
           </ul>
-<div class="header-2">
-	Bio</div>
+          <div class="row">
+ <div class="column">
+   <img src="sweater.jpg" alt="headshot" style="width:100%">
+ </div>
+ <div class="column">
+   <div class="header-2">
+   	Bio</div>
+</div>
 <div class="content">
 Denise Ivanoff is a New York City-based actress, born in Santa Monica, CA. She was nominated for Best Leading Actress in Short Film at the International Festival of World Cinema in Berlin, September 2016, for her first film role, Evelyn in "Airport 2012". She has appeared in several other short films as well as on various stages in Texas as well as New York. <br><br>
 After graduating with a Masters degree in Piano from Baylor University in Waco, TX, she taught piano lessons and accompanied singers and instrumentalists to finance a move to New York City where she studied at the Upright Citizens Brigade Training Center, The Actors Centre in London, UK, and at HB Studio. She continues to study at HB Studio with Mercedes Ruehl and Austin Pendleton.<br><br>
