--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </ul>
           <div class="row">
  <div class="column">
-   <img src="sweater.jpg" alt="headshot" >
+   <img src="sweater.jpg" alt="headshot" width=25%>
  </div>
  <div class="column">
    <div class="header-2">
