Breaks in the bullet points.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ She has no human children, but loves her fur-baby Stevie, a Tibetan Spaniel resc
 	Trivia</div>
 <div class="content">
   <ul>
-<li>Loves being near rivers, lakes, and oceans, but does not know how to swim.<br>
-<li>Father was Bernie Williams, a software engineer, systems design analyst, and early ADA expert of note in the 1970s through 1990s, who worked on several DoD projects as well as the first computerized framework for the LAPD communications, and geological software modeling for Baker Oil.<br>
+<li>Loves being near rivers, lakes, and oceans, but does not know how to swim.<br><br>
+<li>Father was Bernie Williams, a software engineer, systems design analyst, and early ADA expert of note in the 1970s through 1990s, who worked on several DoD projects as well as the first computerized framework for the LAPD communications, and geological software modeling for Baker Oil.<br><br>
 <li>Mother was Doris McVay, who worked as an architectural and then a medical secretary, becoming a school library assistant, and passed away while an active member of the Beardsley School Board of Trustees and Olive Drive Veterinary Hospital office manager.</ul></div>
 <!--
 	<div class="clearfix float-my-children">
