--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
  <div class="column">
    <div class="header-2">
 
-   	Bio</div></div>
+   Denise Ivanoff <br>-- 	Bio -- </div></div>
 </div>
 <br>
 <div class="content">
-Denise Ivanoff is a New York City-based actress, born in Santa Monica, CA. She was nominated for Best Leading Actress in Short Film at the International Festival of World Cinema in Berlin, September 2016, for her first film role, Evelyn in "Airport 2012". She has appeared in several other short films as well as on various stages in Texas as well as New York. <br><br>
+ is a New York City-based actress, born in Santa Monica, CA. She was nominated for Best Leading Actress in Short Film at the International Festival of World Cinema in Berlin, September 2016, for her first film role, Evelyn in "Airport 2012". She has appeared in several other short films as well as on various stages in Texas as well as New York. <br><br>
 After graduating with a Masters degree in Piano from Baylor University in Waco, TX, she taught piano lessons and accompanied singers and instrumentalists to finance a move to New York City where she studied at the Upright Citizens Brigade Training Center, The Actors Centre in London, UK, and at HB Studio. She continues to study at HB Studio with Mercedes Ruehl and Austin Pendleton.<br><br>
 When not acting, Ivanoff writes and directs. Several of her sketches have been performed by The Pin-Up Squirrels at The Pit in NYC, and she has been participating in readings at The Playground Experiment, also in NYC. She begain directing with children's theater in Texas, and now is a regular director for AlphaNYC as well as freelancing at various festivals.<br><br>
 She has no human children, but loves her fur-baby Stevie, a Tibetan Spaniel rescued by Animal Haven, met at Broadway Barks, and named for composer Stephen Sondheim. Her husband, a hospital administrator, also loves Stevie.</div>
