Getting rid of word BIO

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  <div class="column">
    <div class="header-2">
 
-   Denise Ivanoff <br>-- 	Bio -- </div></div>
+   <br>Denise <br>Ivanoff <br> </div></div>
 </div>
 <br>
 <div class="content">
