fixing nav making up new class to display photos better

--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
 
           <ul class="sidenav">
             <li><a href="index.html">HOME</a></li>
-	    <li><aclass="active" href="resume.html">RESUME, PHOTOS, REEL, CLIPS</a></li>
+	    <li><a class="active" href="resume.html">RESUME, PHOTOS, REEL, CLIPS</a></li>
             <li><a href="http://link.reelwomen-nyc.com/contactus" target="_blank">CONTACT</a></li>
           </ul>
 
@@ -28,13 +28,13 @@
 
  Additional Photos</div>
 <br> <div class="row">
-  <div class="column">
+  <div class="photocolumn">
     <img src="bw.jpg" alt="headshot" style="width:100%">
   </div>
-  <div class="column">
+  <div class="photocolumn">
     <img src="side.jpg" alt="headshot" style="width:100%">
   </div>
-  <div class="column">
+  <div class="photocolumn">
     <img src="hoops.jpg" alt="headshot" style="width:100%">
   </div>
 </div>
