Changing order of photos

--- a/resume.html
+++ b/resume.html
@@ -23,19 +23,19 @@
 
    <div class="header-2">
 
-   Denise Ivanoff Resume</div>
+   Denise Ivanoff<br> Resume</div>
 <br> <div class="header-2">
 
  Additional Photos</div>
 <br> <div class="row">
   <div class="photocolumn">
-    <img src="bw.jpg" alt="headshot" style="width:100%">
+    <img src="hoops.jpg" alt="headshot" style="width:100%">
   </div>
   <div class="photocolumn">
     <img src="side.jpg" alt="headshot" style="width:100%">
   </div>
   <div class="photocolumn">
-    <img src="hoops.jpg" alt="headshot" style="width:100%">
+    <img src="bw.jpg" alt="headshot" style="width:100%">
   </div>
 </div>
 
