--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
 
    Denise Ivanoff<br> Resume</div>
 <br> <div class="header-2">
-
+<A href="/DeniseIvanoffWebsite.pdf>"<Img src="DeniseIvanoffWebsite.pdf"></a><br>
  Additional Photos</div>
 <br> <div class="row">
   <div class="photocolumn">
