Fixing bad link

--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
    Denise Ivanoff<br> Resume</div>
 <br> <div class="header-2">
 
-<a href="/DeniseIvanoffWebsite.pdf"> <Img src="DeniseIvanoffWebsite.pdf"> </a> <br>
+<a href="/DeniseIvanoffWebsite.pdf"> <Img src="/deniseivanoff/DeniseIvanoffWebsite.pdf"> </a> <br>
  Additional Photos</div>
 <br> <div class="row">
   <div class="photocolumn">
