Fixed weird stuff

--- a/resume.html
+++ b/resume.html
@@ -24,9 +24,9 @@
    <div class="header-2">
 
    Denise Ivanoff<br> Resume</div>
-<br> <div class="header-2">
+<br>
 
-<a href="/DeniseIvanoffWebsite.pdf"> <Img src="/deniseivanoff/DeniseIvanoffWebsite.pdf"> </a> <br>
+<a href="/DeniseIvanoffWebsite.pdf"> <Img src="/deniseivanoff/DeniseIvanoffWebsite.pdf"> </a> <br><div class="header-2">
  Additional Photos</div>
 <br> <div class="row">
   <div class="photocolumn">
