Putting back the regular column I accidentally deleted.

--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,8 @@
    Denise Ivanoff<br> Resume</div>
 <br>
 
-<a href="/DeniseIvanoffWebsite.pdf"> <Img src="/deniseivanoff/DeniseIvanoffWebsite.pdf"> </a> <br><div class="header-2">
+<a href="/DeniseIvanoffWebsite.pdf">
+   <Img src="/deniseivanoff/DeniseIvanoffWebsite.pdf"> </a> <br><div class="header-2">
  Additional Photos</div>
 <br> <div class="row">
   <div class="photocolumn">
