Trying to get the resume to show

--- a/resume.html
+++ b/resume.html
@@ -25,9 +25,9 @@
 
    Denise Ivanoff<br> Resume</div>
 <br>
-
-<a href="/DeniseIvanoffWebsite.pdf">
-   <Img src="/deniseivanoff/DeniseIvanoffWebsite.pdf"> </a> <br><div class="header-2">
+<iframe src="DeniseIvanoff/DeniseIvanoffWebsite.pdf" width="100%" >
+   </iframe>
+ <br><div class="header-2">
  Additional Photos</div>
 <br> <div class="row">
   <div class="photocolumn">
