--- a/resume.html
+++ b/resume.html
@@ -27,6 +27,11 @@
 <br>
 <iframe src="DeniseIvanoffWebsite.pdf"  width="100%" height="500px" >
    </iframe>
+   <object data=DeniseIvanoffWebsite.pdf" type="application/pdf" width="100%" height="800px">
+ <p>It appears you don't have a PDF plugin for this browser.
+ No biggie... you can <a href="assets/test.pdf">click here to
+  download the PDF file.</a></p>
+</object>
  <br><div class="header-2">
  Additional Photos</div>
 <br> <div class="row">
