--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
    Denise Ivanoff<br> Resume</div>
 <br>
 
-   <object data=DeniseIvanoffWebsite.pdf" type="application/pdf" width="100%" height="800px">
+   <object data="DeniseIvanoffWebsite.pdf" type="application/pdf" width="100%" height="800px">
  <p>It appears you don't have a PDF plugin for this browser.
  No biggie... you can <a href="assets/test.pdf">click here to
   download the PDF file.</a></p>
