Putthe resume note within content div

--- a/resume.html
+++ b/resume.html
@@ -25,12 +25,12 @@
 
    Denise Ivanoff<br> Resume</div>
 <br>
-
+<div class="content"
    <object data="DeniseIvanoffWebsite.pdf" type="application/pdf" width="100%" height="800px">
  <p>It appears you don't have a PDF plugin for this browser.
  No biggie... you can <a href="assets/test.pdf">click here to
   download the PDF file.</a></p>
-</object>
+</object></div>
  <br><div class="header-2">
  Additional Photos</div>
 <br> <div class="row">
