--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
 <div class="content"
    <object data="DeniseIvanoffWebsite.pdf" type="application/pdf" width="100%" height="800px">
  <p>It appears you don't have a PDF plugin for this browser.
- No biggie... you can <a href="assets/test.pdf">click here to
+ No biggie... you can <a href="assets/DeniseIvanoffWebsite.pdf">click here to
   download the PDF file.</a></p>
 </object></div>
  <br><div class="header-2">
