Yet another resume try, this time with prep for video

--- a/resume.html
+++ b/resume.html
@@ -25,11 +25,11 @@
 
    Denise Ivanoff<br> Resume</div>
 <br>
-<div class="content"
-   <object data="assets/DeniseIvanoffWebsite.pdf" type="application/pdf" width="100%" height="800px">
- <p>It appears you don't have a PDF plugin for this browser.
- No biggie... you can <a href="assets/DeniseIvanoffWebsite.pdf">click here to
-  download the PDF file.</a></p>
+<div class="content">
+ <a href="assets/DeniseIvanoffWebsite.pdf">click here to
+  download the PDF file.</a>
+<img src="DeniseIvanoffWebsite.jpg" alt="resume"  style="width:100%">
+
 </object></div>
  <br><div class="header-2">
  Additional Photos</div>
@@ -48,6 +48,13 @@
 <br> <div class="header-2">
 
 Reel</div>
+<br>
+<div class="video-container">
+<iframe src="https://www.youtube.com/embed/y1yFiotx3qk"
+  allowfullscreen="allowfullscreen" width="781" height="440"
+  frameborder="0">
+</iframe>
+</div>
 <!--
 	<div class="clearfix float-my-children">
 		<a href="https://www.imdb.com/title/tt8164424/" target="_blank">
