Now with my full acting reel.

--- a/resume.html
+++ b/resume.html
@@ -50,10 +50,8 @@
 Reel</div>
 <br>
 <div class="video-container">
-<iframe src="https://www.youtube.com/embed/y1yFiotx3qk"
-  allowfullscreen="allowfullscreen" width="781" height="440"
-  frameborder="0">
-</iframe>
+  <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen></iframe>
+
 </div>
 <!--
 	<div class="clearfix float-my-children">
