--- a/resume.html
+++ b/resume.html
@@ -48,11 +48,19 @@
 <br> <div class="header-2">
 
 Reel</div>
-<br>
+<br>  <div class="row">
+<div class="column">
 <div class="video-container">
   <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen></iframe>
-
 </div>
+</div>
+<div class="column">
+<div class="video-container">
+  <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen></iframe>
+</div>
+</div>
+</div>
+
 <!--
 	<div class="clearfix float-my-children">
 		<a href="https://www.imdb.com/title/tt8164424/" target="_blank">
