Can I float text under my clips?

--- a/resume.html
+++ b/resume.html
@@ -56,11 +56,23 @@ Reel</div>
 </div>
 <div class="column">
 <div class="video-container">
-  <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen></iframe>
+  <iframe src="https://player.vimeo.com/video/177158900" width="640" height="360" frameborder="0" allow="fullscreen"
+   allowfullscreen></iframe>
 </div>
 </div>
 </div>
-
+<div class="row">
+<div class="column">
+<div class="content">
+Full acting reel
+</div>
+</div>
+<div class="column">
+<div class="content">
+Clip from Indie Drama Aiport 2012
+</div>
+</div>
+</div>
 <!--
 	<div class="clearfix float-my-children">
 		<a href="https://www.imdb.com/title/tt8164424/" target="_blank">
