--- a/resume.html
+++ b/resume.html
@@ -48,10 +48,12 @@
 <br> <div class="header-2">
 
 Reel</div>
-<br>  <div class="row">
+<br>
+ <div class="row">
 <div class="column">
 <div class="video-container">
-  <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen></iframe>
+  <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
+  </iframe>
 </div>
 </div>
 <div class="column">
