Let's see what happens with 4 videos

--- a/resume.html
+++ b/resume.html
@@ -75,6 +75,34 @@ Clip from Indie Drama Aiport 2012
 </div>
 </div>
 </div>
+<br>
+<div class="row">
+<div class="column">
+<div class="video-container">
+ <iframe src="https://player.vimeo.com/video/177153014" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
+ </iframe>
+</div>
+</div>
+<div class="column">
+<div class="video-container">
+  <iframe src="https://player.vimeo.com/video/175223822" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
+  </iframe>
+</div>
+</div>
+</div>
+<div class="row">
+<div class="column">
+<div class="content">
+Lonely old lady - live Sketch comedy Clip
+</div>
+</div>
+<div class="column">
+<div class="content">
+  Lonely old lady - Full length<br>
+  Apple Care, written by Catherine Gasta, perfromerd at Triple Crown by Catherine Gasta and Denise Denise Ivanoff, NYC, 2015
+</div>
+</div>
+</div>
 <!--
 	<div class="clearfix float-my-children">
 		<a href="https://www.imdb.com/title/tt8164424/" target="_blank">
