--- a/resume.html
+++ b/resume.html
@@ -58,8 +58,8 @@ Reel</div>
 </div>
 <div class="column">
 <div class="video-container">
-  <iframe src="https://player.vimeo.com/video/177158900" width="640" height="360" frameborder="0" allow="fullscreen"
-   allowfullscreen></iframe>
+  <iframe src="https://player.vimeo.com/video/177158900" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
+  </iframe>
 </div>
 </div>
 </div>
