--- a/resume.html
+++ b/resume.html
@@ -52,22 +52,19 @@ Reel</div>
  <div class="row">
 <div class="column">
 <div class="video-container">
-  <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
-  </iframe>
+  <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen></iframe>
+
 </div>
 </div>
-<div class="column">
-<div class="video-container">
-  <iframe src="https://player.vimeo.com/video/177158900" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
-  </iframe>
-</div>
-</div>
-</div>
-<div class="row">
 <div class="column">
 <div class="content">
 Full acting reel
 </div>
+</div>
+</div>
+
+<div class="row">
+<div class="column">
 </div>
 <div class="column">
 <div class="content">
