--- a/resume.html
+++ b/resume.html
@@ -49,22 +49,14 @@
 
 Reel</div>
 <br>
- <div class="row">
-<div class="column">
-<div class="video-container">
-  <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen></iframe>
 
+<div class="video-container">
+  <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
+  </iframe>
 </div>
-</div>
-<div class="column">
 <div class="content">
 Full acting reel
 </div>
-</div>
-</div>
-
-
-<br>
 <div class="row">
 <div class="column">
 <div class="video-container">
