Trying to get a column of embedded videos

--- a/resume.html
+++ b/resume.html
@@ -53,11 +53,14 @@ Reel</div>
 <div class="video-container">
   <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
   </iframe>
-
+<div>
 <br>
+<div class="video-container">
 <iframe src="https://player.vimeo.com/video/177153014" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
 </iframe>
+</div>
 <br>
+<div class="video-container">
   <iframe src="https://player.vimeo.com/video/175223822" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
   </iframe>
 </div>
