--- a/resume.html
+++ b/resume.html
@@ -49,22 +49,23 @@
 
 Reel</div>
 <br>
-
-<div class="video-container">
+<div class="content">
+<table>
+  <tr>
+<td>
   <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
-  </iframe>
-<div>
-<br>
-<div class="video-container">
+  </iframe></td>
+</tr>
+<tr>
+  <td>
 <iframe src="https://player.vimeo.com/video/177153014" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
 </iframe>
-</div>
-<br>
-<div class="video-container">
+</td></tr>
+<tr><td>
   <iframe src="https://player.vimeo.com/video/175223822" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
-  </iframe>
+  </iframe></td></tr>
+</table>
 </div>
-
 
 
 
