--- a/resume.html
+++ b/resume.html
@@ -53,17 +53,15 @@ Reel</div>
 <table>
   <tr>
 <td>
-  <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
-  </iframe></td>
+  <iframe src="https://player.vimeo.com/video/296972538" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></td>
 </tr>
 <tr>
   <td>
-<iframe src="https://player.vimeo.com/video/177153014" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
-</iframe>
+    <iframe src="https://player.vimeo.com/video/177153014" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 </td></tr>
 <tr><td>
-  <iframe src="https://player.vimeo.com/video/175223822" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen>
-  </iframe></td></tr>
+  <iframe src="https://player.vimeo.com/video/177158900" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+</td></tr>
 </table>
 </div>
 
