--- a/resume.html
+++ b/resume.html
@@ -62,6 +62,9 @@ Reel</div>
 <tr><td>
   <iframe src="https://player.vimeo.com/video/177158900" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 </td></tr>
+<tr><td><iframe src="https://player.vimeo.com/video/175226530" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+</td></tr>
+
 </table>
 </div>
 
