5 videos with comments so I should be able to keep track

--- a/resume.html
+++ b/resume.html
@@ -55,16 +55,28 @@ Reel</div>
 <tr>
   <td>
     <iframe src="https://player.vimeo.com/video/177153014" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <!--lonely old lady CLIPS
+    -->
+
 </td></tr>
-<tr><td> </td></tr>
+<tr><td> <iframe src="https://player.vimeo.com/video/177158900" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+  <!--Aiport 2012
+  -->
+</td></tr>
 <tr><td>
-  <iframe src="https://player.vimeo.com/video/177158900" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/175226530" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<!-- trending -- >
 </td></tr>
-<tr><td><iframe src="https://player.vimeo.com/video/175226530" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<tr><td>
+  <iframe src="https://player.vimeo.com/video/296782614" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<!--full reel -->
 </td></tr>
 <tr>
 <td>
-<iframe src="https://player.vimeo.com/video/296972538" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></td>
+  <iframe src="https://player.vimeo.com/video/296922225" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<!--piano reel-->
+
+</td>
 </tr>
 </table>
 </div>
