--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <ul class="sidenav">
             <li><a class="active" href="index.html">HOME</a></li>
 	    <li><a href="resume.html">RESUME, PHOTOS, REEL, CLIPS</a></li>
-            <li><a href="http://link.reelwomen-nyc.com/contactus" target="_blank">CONTACT</a></li>
+            <li><a href="contact.html" target="_blank">CONTACT</a></li>
           </ul>
           <div class="row">
  <div class="column">
