--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
           <ul class="sidenav">
             <li><a href="index.html">HOME</a></li>
 	    <li><a class="active" href="resume.html">RESUME, PHOTOS, REEL, CLIPS</a></li>
-            <li><a href="http://link.reelwomen-nyc.com/contactus" target="_blank">CONTACT</a></li>
+            <li><a href="contact.html" target="_blank">CONTACT</a></li>
           </ul>
 
    <div class="header-2">
