--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
 	    <li><a href="resume.html">RESUME, PHOTOS, REEL, CLIPS</a></li>
             <li><a class="active" href="contact.html" target="_blank">CONTACT</a></li>
           </ul>
-
+<div class="content">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc1peX78OEy1QJDgZnZizTZAp_s3vIcGuN5NjbYKXMaI4NHWw/viewform?embedded=true" width="640" height="1226" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
+</div>
 
 <!--
 	<div class="clearfix float-my-children">
