--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
 
    <div class="header-2">
 
-   Denise Ivanoff<br> Resume</div>
+   Denise Ivanoff<br><br> Resume</div>
 <br>
 <div class="content">
  <a href="assets/DeniseIvanoffWebsite.pdf">click here to
@@ -31,6 +31,7 @@
 <img src="DeniseIvanoffWebsite.jpg" alt="resume"  style="width:100%">
 
 </object></div>
+<br>
  <br><div class="header-2">
  Additional Photos</div>
 <br> <div class="row">
