Adding padding to resume

--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
 <div class="content">
  <a href="assets/DeniseIvanoffWebsite.pdf">click here to
   download the PDF file.</a>
-<img src="DeniseIvanoffWebsite.jpg" alt="resume"  style="width:100%">
+<img src="DeniseIvanoffWebsite.jpg" alt="resume"  style="width:100%; padding-bottom:50px;">
 
 </object></div>
 <br>
