Get rid of unneeded object tag

--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
   download the PDF file.</a>
 <img src="DeniseIvanoffWebsite.jpg" alt="resume"  style="width:100%; padding-bottom:50px;">
 
-</object></div>
+</div>
 <br>
  <br><div class="header-2">
  Additional Photos</div>
