--- a/index.html
+++ b/index.html
@@ -32,17 +32,22 @@
 
 <br>
 <div class="content">
- is a New York City-based actress, born in Santa Monica, CA. She was nominated for Best Leading Actress in Short Film at the International Festival of World Cinema in Berlin, September 2016, for her first film role, Evelyn in "Airport 2012". She has appeared in several other short films as well as on various stages in Texas as well as New York. <br><br>
-After graduating with a Masters degree in Piano from Baylor University in Waco, TX, she taught piano lessons and accompanied singers and instrumentalists to finance a move to New York City where she studied at the Upright Citizens Brigade Training Center, The Actors Centre in London, UK, and at HB Studio. She continues to study at HB Studio with Mercedes Ruehl and Austin Pendleton.<br><br>
-When not acting, Ivanoff writes and directs. Several of her sketches have been performed by The Pin-Up Squirrels at The Pit in NYC, and she has been participating in readings at The Playground Experiment, also in NYC. She begain directing with children's theater in Texas, and now is a regular director for AlphaNYC as well as freelancing at various festivals.<br><br>
-She has no human children, but loves her fur-baby Stevie, a Tibetan Spaniel rescued by Animal Haven, met at Broadway Barks, and named for composer Stephen Sondheim. Her husband, a hospital administrator, also loves Stevie.</div>
-<div class="header-2">
-	Trivia</div>
-<div class="content">
-  <ul>
-<li>Loves being near rivers, lakes, and oceans, but does not know how to swim.<br><br>
-<li>Father was Bernie Williams, a software engineer, systems design analyst, and early ADA expert of note in the 1970s through 1990s, who worked on several DoD projects as well as the first computerized framework for the LAPD communications, and geological software modeling for Baker Oil.<br><br>
-<li>Mother was Doris McVay, who worked as an architectural and then a medical secretary, becoming a school library assistant, and passed away while an active member of the Beardsley School Board of Trustees and Olive Drive Veterinary Hospital office manager.</ul></div>
+ is a New York City-based stage and screen actress. She was nominated for Best Leading Actress in Short Film at the International 
+	Festival of World Cinema in Berlin, September 2016, as well as Best Lead Actress in a Short Film ] Antwerp IFF 2020, for her first 
+	film role, Evelyn in "Airport 2012". She has appeared in several other short films and features as well as on various stages in Texas
+	and New York. <br><br>
+She completed the Improvisation Core program at the Upright Citizens Brigade Training Center in NYC, was a member of the sketch groups 
+	The Pin-Up Squirrels and New Jerk City, performed with the improv group Contagious, and hosted Sleepytime Comedy Hour for two years at 
+	The Triple Crown Basement. Past acting teachers include Carol Rosenfeld and Austin Pendleton of HB Studio, Yvonne Morley and David Tucker at 
+	The Actor's Centre in London, UK, Alex Pepperman and Laira Yumi Snell of Soho Shakes. She recently participated in a master class 
+	cfonducted by Annie Potts, and  currenty studies with Tony- and Oscar-winning actress Mercedes Ruehl.<br><br>
+When not acting, Ivanoff writes and directs. and she has been participating in readings at The Playground Experiment, also in NYC. 
+	She begain directing with children's theater in Texas, and now is a frequent director for AlphaNYC and festivals at TADA 
+	and the Manhattan Rertory Theatre.
+	<br><br>Quarantine life has been most challenging, as interests normally include going out with friends, attending live theatre and concerts, 
+basically anything you do indoors with a lot of people. In the meantime, she has been taking a lot of online dance classes, craft classes, and brushing up on her Spanish. 
+</div>
+
 <!--
 	<div class="clearfix float-my-children">
 		<a href="https://www.imdb.com/title/tt8164424/" target="_blank">
