--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ She completed the Improvisation Core program at the Upright Citizens Brigade Tra
 	cfonducted by Annie Potts, and  currenty studies with Tony- and Oscar-winning actress Mercedes Ruehl.<br><br>
 When not acting, Ivanoff writes and directs. and she has been participating in readings at The Playground Experiment, also in NYC. 
 	She begain directing with children's theater in Texas, and now is a frequent director for AlphaNYC and festivals at TADA 
-	and the Manhattan Rertory Theatre.
+	and the Manhattan Repertory Theatre.
 	<br><br>Quarantine life has been most challenging, as interests normally include going out with friends, attending live theatre and concerts, 
 basically anything you do indoors with a lot of people. In the meantime, she has been taking a lot of online dance classes, craft classes, and brushing up on her Spanish. 
 </div>
