--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Merriweather&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,600&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap" rel="stylesheet"> 
 
 </head>
 <body>
