--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
 <br>
 <div class="content">
  is a New York City-based stage and screen actress. She was nominated for Best Leading Actress in Short Film at the International 
-	Festival of World Cinema in Berlin, September 2016, as well as Best Lead Actress in a Short Film ] Antwerp IFF 2020, for her first 
+	Festival of World Cinema in Berlin, September 2016, as well as Best Lead Actress in a Short Film | Antwerp IFF 2020, for her first 
 	film role, Evelyn in "Airport 2012". She has appeared in several other short films and features as well as on various stages in Texas
 	and New York. <br><br>
 She completed the Improvisation Core program at the Upright Citizens Brigade Training Center in NYC, was a member of the sketch groups 
 	The Pin-Up Squirrels and New Jerk City, performed with the improv group Contagious, and hosted Sleepytime Comedy Hour for two years at 
 	The Triple Crown Basement. Past acting teachers include Carol Rosenfeld and Austin Pendleton of HB Studio, Yvonne Morley and David Tucker at 
-	The Actor's Centre in London, UK, Alex Pepperman and Laira Yumi Snell of Soho Shakes. She recently participated in a master class 
-	cfonducted by Annie Potts, and  currenty studies with Tony- and Oscar-winning actress Mercedes Ruehl.<br><br>
-When not acting, Ivanoff writes and directs. and she has been participating in readings at The Playground Experiment, also in NYC. 
-	She begain directing with children's theater in Texas, and now is a frequent director for AlphaNYC and festivals at TADA 
+	The Actor's Centre in London, UK, Alex Pepperman and Laura Yumi Snell of Soho Shakes. She recently participated in a master class 
+	conducted by Annie Potts, and  currenty studies with Tony- and Oscar-winning actress Mercedes Ruehl.<br><br>
+When not acting, Ivanoff writes and directs, and has been participating in readings at The Playground Experiment, also in NYC. 
+	She began directing with children's theater in Texas, and is now a frequent director for AlphaNYC and festivals at TADA 
 	and the Manhattan Repertory Theatre.
-	<br><br>Quarantine life has been most challenging, as interests normally include going out with friends, attending live theatre and concerts, 
-basically anything you do indoors with a lot of people. In the meantime, she has been taking a lot of online dance classes, craft classes, and brushing up on her Spanish. 
+	<br><br>Quarantine life has been challenging, as interests normally include going out with friends, attending live theatre and concerts, 
+basically anything you do indoors with a lot of people. In the meantime, she has been taking a lot of online dance and craft classes, brushing up on her Spanish, planning future travel, hosting online viewing parties, pestering her husband and dog, making enchilada sauce from scratch, and perfecting her mixology skills in anticipation of a return to a vibrant in-person social life.
 </div>
 
 <!--
